--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Admin Giriş Paneli</title>
 </head>
 <body>
     
@@ -14,7 +14,7 @@
         <input id="username" type="text" name="user" placeholder="Kullanıcı Adı">
         <input id="password" type="password" name="password" placeholder="Şifre">
         <button class="btn" id="btn"  type="submit">GİRİŞ</button>
-        <a class="newPassword" href="#">şifremi unuttum</a>
+        <a class="newPassword" href="newPassword.html">şifremi unuttum</a>
     </form>
 
     <script src="js/script.js"></script>
