şifre yenileme ekranı eklendi

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     
-    <form action="">
-        <h2 class="title">Admin Giriş</h2>
+    <form id="userForm" class="main" method="post">
+        <h2 style="margin-bottom: 20px;" class="title">Admin Giriş</h2>
         <input id="username" type="text" name="user" placeholder="Kullanıcı Adı">
         <input id="password" type="password" name="password" placeholder="Şifre">
         <button class="btn" id="btn"  type="submit">GİRİŞ</button>
-        <a class="newPassword" href="newPassword.html">şifremi unuttum</a>
+        <a class="newPasswordLink" href="newPassword.html">şifremi unuttum</a>
     </form>
 
     <script src="js/script.js"></script>
