--- a/newPassword.html
+++ b/newPassword.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Şifre Yenileme Ekranı</title>
+
 </head>
 <body>
     
-    <h2>Geçmiş Olsun</h2>
+    <form id="userForm" class="newPassword-main" method="post">
+        <h2 style="margin: 0 13%; font-size:2.2rem; margin-bottom: 30px; " id="title" class="title">Şifre Yenileme Ekranı</h2>
+        <input type="email" placeholder="Email">
+        <button id="newPasswordBtn" class="btn">Giriş Bağlantısı Gönder</button>
+    </form>
 
+    <script src="js/newPasswordScript.js"></script>
 </body>
 </html>
