--- a/newPassword.html
+++ b/newPassword.html
@@ -11,9 +11,10 @@
 <body>
     
     <form id="userForm" class="newPassword-main" method="post">
-        <h2 style="margin: 0 13%; font-size:2.2rem; margin-bottom: 30px; " id="title" class="title">Şifre Yenileme Ekranı</h2>
-        <input type="email" placeholder="Email">
-        <button id="newPasswordBtn" class="btn">Giriş Bağlantısı Gönder</button>
+        <h2 id="title" class="title">Şifre Yenileme Ekranı</h2>
+        <input id="input" type="email" placeholder="Email">
+        <button onclick="degisim();" id="newPasswordBtn" class="btn">Kodu Gönder</button>
+        <div id="panel"></div>
     </form>
 
     <script src="js/newPasswordScript.js"></script>
