güvenlik kodu doğru girilirse şifre yenileyebilir

--- a/newPassword.html
+++ b/newPassword.html
@@ -13,7 +13,7 @@
     <form id="userForm" class="newPassword-main" method="post">
         <h2 id="title" class="title">Şifre Yenileme Ekranı</h2>
         <input id="input" type="email" placeholder="Email">
-        <button onclick="degisim();" id="newPasswordBtn" class="btn">Kodu Gönder</button>
+        <button onclick="degisim();" id="newPasswordBtn" class="btn">Güvenlik Kodu Gönder</button>
         <div id="panel"></div>
     </form>
 
