consola gelen güvenlik kodu mesajı düzenlendi

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     
     <form id="userForm" class="main" method="post">
         <h2 style="margin-bottom: 20px;" class="title">Admin Giriş</h2>
-        <input id="username" type="text" name="user" placeholder="Kullanıcı Adı">
-        <input id="password" type="password" name="password" placeholder="Şifre">
-        <button class="btn" id="btn"  type="submit">GİRİŞ</button>
+        <input class="input" id="username" type="text" name="user" placeholder="Kullanıcı Adı">
+        <input class="input" id="password" type="password" name="password" placeholder="Şifre">
+        <div id="panelDiv">
+            <button class="btn" id="btn"  type="submit">GİRİŞ</button>
+        </div>
         <a class="newPasswordLink" href="newPassword.html">şifremi unuttum</a>
     </form>
 
