--- a/newPassword.html
+++ b/newPassword.html
@@ -12,9 +12,10 @@
     
     <form id="userForm" class="newPassword-main" method="post">
         <h2 id="title" class="title">Şifre Yenileme Ekranı</h2>
-        <input id="input" type="email" placeholder="Email">
-        <button onclick="degisim();" id="newPasswordBtn" class="btn">Güvenlik Kodu Gönder</button>
-        <div id="panel"></div>
+        <input class="input" id="input" type="email" placeholder="Email">
+        <div class="newInp" id="panelInput"></div>
+        <button id="newPasswordBtn" class="btn">Güvenlik Kodu Gönder</button>
+        <div style="display: inline-flex;justify-content: center;" id="panelBtn"></div>
     </form>
 
     <script src="js/newPasswordScript.js"></script>
