--- a/newPassword.html
+++ b/newPassword.html
@@ -12,7 +12,7 @@
     
     <form id="userForm" class="newPassword-main" method="post">
         <h2 id="title" class="title">Şifre Yenileme Ekranı</h2>
-        <input class="input" id="input" type="email" placeholder="Email">
+        <input class="input" id="email" type="email" placeholder="Email">
         <div class="newInp" id="panelInput"></div>
         <button id="newPasswordBtn" class="btn">Güvenlik Kodu Gönder</button>
         <div style="display: inline-flex;justify-content: center;" id="panelBtn"></div>
